<resources>
    <string name="app_name">Simple Login</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to your account</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_biometric">Use Fingerprint / Face Unlock</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="logout">Sign Out</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="login_success">Logged in successfully</string>
    <string name="signup_success">Account created successfully</string>
    <string name="login_failed">Authentication failed: %1$s</string>
    <string name="biometric_title">Biometric Authentication</string>
    <string name="biometric_subtitle">Log in using your biometric credential</string>
    <string name="biometric_cancel">Use Password</string>
    <string name="biometric_not_available">Biometric authentication is not set up or not supported on this device</string>
</resources>
